--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
         </div>
     </section>
 
-    <!-- CLIMA -->
-    <section class="ClimaSection" id="clima">
-        <div class="clima">
-            <img src="imgs/clima.png" alt="climaIMG">
-            <div class="climaText">
-                <h2>Aplicação de Clima</h2>
-                <p>(OpenWeather API)Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
+    <!-- JOGO DA MEMÓRIA -->
+    <section class="memoryGameSection" id="memory">
+        <div class="memoryGame">
+            <img src="imgs/jogoDaMemoria.png" alt="climaIMG">
+            <div class="memoryGameText">
+                <h2>Jogo da Memória</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
                 <div class="buttons">
-                    <button onclick="location.href='pages/clima.html'">Visualizar</button>
+                    <button onclick="location.href='pages/memoryGame.html'">Visualizar</button>
                     <a href="https://github.com/Ryanzhin22/javascriptChallenges" target="_blank"><button>Ver código</button></a>
                 </div>
             </div>
