--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
                 <div class="buttons">
                     <button onclick="location.href='pages/calculadora.html'">Visualizar</button>
-                    <a href="https://github.com/Ryanzhin22/javascriptChallenges" target="_blank"><button>Ver código</button></a>
+                    <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/calculadora.js" target="_blank"><button>Ver código</button></a>
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
                 <div class="buttons">
                     <button onclick="location.href='pages/cronometro.html'">Visualizar</button>
-                    <a href="https://github.com/Ryanzhin22/javascriptChallenges" target="_blank"><button>Ver código</button></a>
+                    <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/cronometro.js" target="_blank"><button>Ver código</button></a>
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
                 <div class="buttons">
                     <button onclick="location.href='pages/todolist.html'">Visualizar</button>
-                    <a href="https://github.com/Ryanzhin22/javascriptChallenges" target="_blank"><button>Ver código</button></a>
+                    <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/todolist.js" target="_blank"><button>Ver código</button></a>
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
                 <div class="buttons">
                     <button onclick="location.href='pages/CalculadoraIMC.html'">Visualizar</button>
-                    <a href="https://github.com/Ryanzhin22/javascriptChallenges" target="_blank"><button>Ver código</button></a>
+                    <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/calculadoraIMC.js" target="_blank"><button>Ver código</button></a>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
                 <div class="buttons">
                     <button onclick="location.href='pages/memoryGame.html'">Visualizar</button>
-                    <a href="https://github.com/Ryanzhin22/javascriptChallenges" target="_blank"><button>Ver código</button></a>
+                    <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/memoryGame.js" target="_blank"><button>Ver código</button></a>
                 </div>
             </div>
         </div>
@@ -117,7 +117,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
                 <div class="buttons">
                     <button onclick="location.href='pages/digitTest.html'">Visualizar</button>
-                    <a href="https://github.com/Ryanzhin22/javascriptChallenges" target="_blank"><button>Ver código</button></a>
+                    <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/digitTest.js" target="_blank"><button>Ver código</button></a>
                 </div>
             </div>
         </div>
