--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <h2>Pronto para vê-los e se desafiar?</h2>
             <p>Este é um site com a finalidade de reunir vários desafios em Javascript puro em um só local. Venha conhecer todos os projetos realizados e armazenados nesse site, contendo uma série deles, como uma <strong>Calculadora, Cronometro, To Do List</strong>, e muitos outros! </p>
         </div>
-        <button class="contentContainerButton">
+        <a href="#calc"><button class="contentContainerButton">
             Venha conhecer!
-        </button>
+        </button></a>
     </main>
 
 
@@ -41,7 +41,7 @@
             <img src="imgs/calculadoraJS.png" alt="calculator">
             <div class="calculatorText">
                 <h2>Calculadora</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
+                <p>Uma calculadora em JavaScript é uma ferramenta simples que permite aos usuários realizar operações matemáticas básicas, como adição, subtração, multiplicação e divisão, diretamente no navegador da web. Desenvolvida com HTML, CSS e JavaScript, essa calculadora apresenta uma interface amigável com botões para inserir números e realizar as operações desejadas.</p>
                 <div class="buttons">
                     <button onclick="location.href='pages/calculadora.html'">Visualizar</button>
                     <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/calculadora.js" target="_blank"><button>Ver código</button></a>
@@ -55,7 +55,7 @@
             <img src="imgs/cronometroJS.png" alt="calculator">
             <div class="timerText">
                 <h2>Cronômetro</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
+                <p>Um cronômetro em JavaScript é uma ferramenta simples que permite aos usuários medir o tempo decorrido entre eventos ou acompanhar a duração de uma atividade específica. Desenvolvido com HTML, CSS e JavaScript, este cronômetro apresenta uma interface minimalista com botões para iniciar, pausar, reiniciar e marcar no cronômetro, juntamente com a exibição do tempo decorrido em tempo real.</p>
                 <div class="buttons">
                     <button onclick="location.href='pages/cronometro.html'">Visualizar</button>
                     <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/cronometro.js" target="_blank"><button>Ver código</button></a>
@@ -69,7 +69,7 @@
             <img src="imgs/toDoListJS.png" alt="calculator">
             <div class="toDoListText">
                 <h2>To Do List</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
+                <p>Uma lista de tarefas em JavaScript é uma aplicação simples que permite aos usuários criar, visualizar e gerenciar uma lista de tarefas a serem realizadas. Desenvolvida com HTML, CSS e JavaScript, esta lista de tarefas apresenta uma interface intuitiva com campos para adicionar novas tarefas, marcadores de seleção para indicar tarefas concluídas e pendentes e botões para remover e editar tarefas da lista. </p>
                 <div class="buttons">
                     <button onclick="location.href='pages/todolist.html'">Visualizar</button>
                     <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/todolist.js" target="_blank"><button>Ver código</button></a>
@@ -83,8 +83,8 @@
         <div class="IMCCalculator">
             <img src="imgs/CalculadoraIMC.png" alt="IMCCalculator">
             <div class="IMCCalculatorText">
-                <h2>IMC Calculator</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
+                <h2>Calculadora de IMC</h2>
+                <p>Uma calculadora de Índice de Massa Corporal (IMC) em JavaScript é uma ferramenta simples que permite aos usuários calcular seu IMC com base no peso e altura fornecidos. Desenvolvida com HTML, CSS e JavaScript, esta calculadora apresenta uma interface minimalista com campos para inserir o peso e altura, juntamente com um botão para calcular o IMC. O JavaScript controla a lógica por trás do cálculo do IMC, processando os valores inseridos pelo usuário e exibindo o resultado do cálculo na tela. </p>
                 <div class="buttons">
                     <button onclick="location.href='pages/CalculadoraIMC.html'">Visualizar</button>
                     <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/calculadoraIMC.js" target="_blank"><button>Ver código</button></a>
@@ -99,7 +99,7 @@
             <img src="imgs/jogoDaMemoria.png" alt="climaIMG">
             <div class="memoryGameText">
                 <h2>Jogo da Memória</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
+                <p>Um jogo da memória em JavaScript é uma aplicação interativa que desafia os jogadores a encontrar pares de cartas idênticas em um conjunto embaralhado. O JavaScript controla a lógica do jogo, registrando as cartas viradas e verificando se as cartas correspondentes foram encontradas. Quando um par de cartas idênticas é descoberto, elas permanecem visíveis. Caso contrário, elas são viradas novamente. O jogo continua até que todos os pares sejam encontrados.</p>
                 <div class="buttons">
                     <button onclick="location.href='pages/memoryGame.html'">Visualizar</button>
                     <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/memoryGame.js" target="_blank"><button>Ver código</button></a>
@@ -114,7 +114,7 @@
             <img src="imgs/digitTest.png" alt="DigitTest">
             <div class="DigitTestText">
                 <h2>Teste de Digitação</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam aliquid dolor cupiditate temporibus error! Nihil delectus dolorem rerum officiis explicabo repellendus ullam exercitationem? Minus modi quisquam ad impedit ducimus doloremque?</p>
+                <p>Um teste de digitação em JavaScript é uma aplicação interativa que permite aos usuários praticar e melhorar sua velocidade de digitação. Desenvolvido com HTML, CSS e JavaScript, este teste de digitação apresenta um campo de texto onde os usuários podem digitar um texto fornecido. O JavaScript controla a lógica por trás do teste, registrando o tempo levado para digitar o texto e contando o número de caracteres corretos digitados.</p>
                 <div class="buttons">
                     <button onclick="location.href='pages/digitTest.html'">Visualizar</button>
                     <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/digitTest.js" target="_blank"><button>Ver código</button></a>
