--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h2>Calculadora de IMC</h2>
                 <p>Uma calculadora de Índice de Massa Corporal (IMC) em JavaScript é uma ferramenta simples que permite aos usuários calcular seu IMC com base no peso e altura fornecidos. Desenvolvida com HTML, CSS e JavaScript, esta calculadora apresenta uma interface minimalista com campos para inserir o peso e altura, juntamente com um botão para calcular o IMC. O JavaScript controla a lógica por trás do cálculo do IMC, processando os valores inseridos pelo usuário e exibindo o resultado do cálculo na tela. </p>
                 <div class="buttons">
-                    <button onclick="location.href='pages/CalculadoraIMC.html'">Visualizar</button>
+                    <button onclick="location.href='pages/calculadoraIMC.html'">Visualizar</button>
                     <a href="https://github.com/Ryanzhin22/javascriptChallenges/blob/main/js/calculadoraIMC.js" target="_blank"><button>Ver código</button></a>
                 </div>
             </div>
@@ -124,8 +124,6 @@
     </section>
 
     <!-- JOGO DA MEMÓRIA -->
-
-    
 
     <footer-component></footer-component>
 </body>
